changing to table form

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
-html{
+html,body{
     background-color: orange;
+    height: 100%;
+}
+#container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#taskSelector{
-    height: 100px;
-    width:100px;
-    background-color: orange;
-    border:1px solid black;
-    margin: 25px 50px;
-}
+
